--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "@swimlane/ngx-datatable": "^20.1.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
